correcion vistas para bandeja de entrada y salida

--- a/src/app/communications/presentation/pages/inbox/inbox.component.html
+++ b/src/app/communications/presentation/pages/inbox/inbox.component.html
@@ -100,7 +100,7 @@
   </div>
 </div>
 
-<div class="mat-elevation-z8 px-2">
+<div class="mat-elevation-z8 sm:px-4">
   <table mat-table [dataSource]="datasource()">
     <ng-container matColumnDef="select">
       <th mat-header-cell *matHeaderCellDef>
