--- a/src/app/procedures/presentation/pages/externals-manage/externals-manage.component.html
+++ b/src/app/procedures/presentation/pages/externals-manage/externals-manage.component.html
@@ -16,7 +16,7 @@
   </div>
 </div>
 
-<div class="mat-elevation-z8">
+<div class="mat-elevation-z8 px-2 sm:px-4">
   <div class="table-container">
     <table mat-table [dataSource]="datasource()">
       <ng-container matColumnDef="send">
@@ -40,17 +40,17 @@
       </ng-container>
       <ng-container matColumnDef="reference">
         <th mat-header-cell *matHeaderCellDef>Referencia</th>
-        <td mat-cell *matCellDef="let row" class="sm:max-w-80">
-          {{ row.reference }}
+        <td mat-cell *matCellDef="let row" class="sm:max-w-72">
+          <p class="truncate">{{ row.reference }}</p>
         </td>
       </ng-container>
       <ng-container matColumnDef="applicant">
         <th mat-header-cell *matHeaderCellDef>Solicitante</th>
         <td mat-cell *matCellDef="let row">
-          {{ row.fullnameApplicant }}
+          {{ row.applicant.fullname | titlecase }}
         </td>
       </ng-container>
-      <ng-container matColumnDef="createdAt">
+      <ng-container matColumnDef="date">
         <th mat-header-cell *matHeaderCellDef>Fecha</th>
         <td mat-cell *matCellDef="let row">
           {{ row.createdAt | date : "short" : "-400" }}
@@ -69,7 +69,7 @@
           <mat-menu #menu="matMenu">
             <button
               mat-menu-item
-              [disabled]="!row.isEnable"
+              [disabled]="!row.isActionable"
               (click)="update(row)"
             >
               <mat-icon>edit</mat-icon>
@@ -77,7 +77,7 @@
             </button>
             <button
               mat-menu-item
-              [disabled]="!row.isEnable"
+              [disabled]="!row.isActionable"
               (click)="send(row)"
             >
               <mat-icon>send</mat-icon>
