--- a/src/app/procedures/presentation/pages/internals-manage/internals-manage.component.html
+++ b/src/app/procedures/presentation/pages/internals-manage/internals-manage.component.html
@@ -17,7 +17,7 @@
     </div>
   </div>
 
-  <div class="mat-elevation-z8">
+  <div class="mat-elevation-z8 px-2 sm:px-4">
     <table mat-table [dataSource]="datasource()">
       <ng-container matColumnDef="send">
         <th mat-header-cell *matHeaderCellDef></th>
@@ -46,7 +46,7 @@
       <ng-container matColumnDef="reference">
         <th mat-header-cell *matHeaderCellDef>Referencia</th>
         <td mat-cell *matCellDef="let element" class="sm:max-w-80">
-          {{ element.reference }}
+          <p class="truncate">{{ element.reference }}</p>
         </td>
       </ng-container>
       <ng-container matColumnDef="applicant">
@@ -92,10 +92,6 @@
             <button mat-menu-item (click)="generateRouteMap(row)">
               <mat-icon>feed</mat-icon>
               <span>Hoja de ruta</span>
-            </button>
-            <button mat-menu-item (click)="generateTemplate()">
-              <mat-icon>feed</mat-icon>
-              <span>Plantilla</span>
             </button>
           </mat-menu>
         </td>
