correcion vista de comunicacion detalle

--- a/src/app/communications/presentation/pages/communication-detail/communication-detail.component.html
+++ b/src/app/communications/presentation/pages/communication-detail/communication-detail.component.html
@@ -44,7 +44,9 @@
         <p>Type Procedure is not define</p>
         } }
       </mat-tab>
-      <mat-tab label="Flujo de trabajo"> </mat-tab>
+      <mat-tab label="Flujo de trabajo">
+        <workflow-list  [workflow]="workflow()"/>
+      </mat-tab>
       <mat-tab label="Flujo de trabajo grafico">
         <workflow-graph [workflow]="workflow()" />
       </mat-tab>
