--- a/src/app/communications/presentation/pages/docs/docs.component.html
+++ b/src/app/communications/presentation/pages/docs/docs.component.html
@@ -140,13 +140,12 @@
         <td class="mat-cell p-2" colspan="6">Sin resultados</td>
       </tr>
     </table>
-    <!-- <mat-paginator
-      aria-label="Select page of officers search results"
+    <mat-paginator
       showFirstLastButtons
       [length]="datasize()"
       [pageIndex]="index()"
       [pageSize]="10"
       (page)="onPageChange($event)"
-    /> -->
+    />
   </div>
 </div>
