--- a/src/app/procedures/presentation/pages/internals-manage/internals-manage.component.html
+++ b/src/app/procedures/presentation/pages/internals-manage/internals-manage.component.html
@@ -1,114 +1,110 @@
-<div class="animate-fadeIn">
-  <mat-toolbar>
-    <span>Internos</span>
-    <span class="flex-1"></span>
-    <button mat-icon-button (click)="create()">
-      <mat-icon>add</mat-icon>
-    </button>
-  </mat-toolbar>
+<mat-toolbar>
+  <span>Internos</span>
+  <span class="flex-1"></span>
+  <button mat-icon-button (click)="create()">
+    <mat-icon>add</mat-icon>
+  </button>
+</mat-toolbar>
 
-  <div class="flex justify-end py-2">
-    <div class="w-full px-2 sm:w-1/4 h-11">
-      <search-input
-        [initValue]="term()"
-        (onSearch)="search($event)"
-        placeholder="Alterno / Referencia"
-      />
-    </div>
-  </div>
-
-  <div class="mat-elevation-z8 px-2 sm:px-4">
-    <table mat-table [dataSource]="datasource()">
-      <ng-container matColumnDef="send">
-        <th mat-header-cell *matHeaderCellDef></th>
-        <td mat-cell *matCellDef="let element" class="w-8">
-          @if(element.isActionable){
-          <mat-icon style="color: orangered">mark_email_unread </mat-icon>
-
-          } @else {
-          <mat-icon style="color: green">mark_email_read</mat-icon>
-          }
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="code">
-        <th mat-header-cell *matHeaderCellDef>Alterno</th>
-        <td
-          mat-cell
-          *matCellDef="let element"
-          [id]="element._id"
-          class="sm:w-52"
-        >
-          <a [routerLink]="['../internal', element._id]" class="text-blue-600">
-            {{ element.code }}
-          </a>
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="reference">
-        <th mat-header-cell *matHeaderCellDef>Referencia</th>
-        <td mat-cell *matCellDef="let element" class="sm:max-w-80">
-          <p class="truncate">{{ element.reference }}</p>
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="applicant">
-        <th mat-header-cell *matHeaderCellDef>Destinatario</th>
-        <td mat-cell *matCellDef="let element">
-          {{ element.sender.fullname | titlecase }}
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="createdAt">
-        <th mat-header-cell *matHeaderCellDef>Fecha</th>
-        <td mat-cell *matCellDef="let element">
-          {{ element.createdAt | date : "short" }}
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="options">
-        <th mat-header-cell *matHeaderCellDef></th>
-        <td mat-cell *matCellDef="let row" class="w-8">
-          <button
-            mat-icon-button
-            aria-label="menu options"
-            [matMenuTriggerFor]="menu"
-          >
-            <mat-icon>more_vert</mat-icon>
-          </button>
-          <mat-menu #menu="matMenu">
-            <button
-              mat-menu-item
-              [disabled]="!row.isActionable"
-              (click)="update(row)"
-            >
-              <mat-icon>edit</mat-icon>
-              <span>Editar</span>
-            </button>
-            <button
-              mat-menu-item
-              [disabled]="!row.isActionable"
-              (click)="send(row)"
-            >
-              <mat-icon>send</mat-icon>
-              <span>Remitir</span>
-            </button>
-            <button mat-menu-item (click)="generateRouteMap(row)">
-              <mat-icon>feed</mat-icon>
-              <span>Hoja de ruta</span>
-            </button>
-          </mat-menu>
-        </td>
-      </ng-container>
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-      <tr class="mat-row" *matNoDataRow>
-        <td class="p-3" colspan="6">Sin resultados resultados</td>
-      </tr>
-    </table>
-    <mat-paginator
-      aria-label="Select page of officers search results"
-      showFirstLastButtons
-      [length]="datasize()"
-      [pageIndex]="index()"
-      [pageSize]="10"
-      (page)="onPageChange($event)"
+<div class="flex justify-end py-2">
+  <div class="w-full px-2 sm:w-1/4 h-11">
+    <search-input
+      [initValue]="term()"
+      (onSearch)="search($event)"
+      placeholder="Alterno / Referencia"
     />
   </div>
+</div>
+
+<div class="px-2 sm:px-4">
+  <table mat-table [dataSource]="datasource()">
+    <ng-container matColumnDef="send">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let element" class="w-8">
+        @if(element.isActionable){
+        <mat-icon style="color: orangered">mark_email_unread </mat-icon>
+
+        } @else {
+        <mat-icon style="color: green">mark_email_read</mat-icon>
+        }
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="code">
+      <th mat-header-cell *matHeaderCellDef>Alterno</th>
+      <td mat-cell *matCellDef="let element" [id]="element._id" class="sm:w-52">
+        <a
+          [routerLink]="['../internal', 'detail', element._id]"
+          class="text-blue-600"
+        >
+          {{ element.code }}
+        </a>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="reference">
+      <th mat-header-cell *matHeaderCellDef>Referencia</th>
+      <td mat-cell *matCellDef="let element" class="sm:max-w-80">
+        <p class="truncate">{{ element.reference }}</p>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="applicant">
+      <th mat-header-cell *matHeaderCellDef>Destinatario</th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.sender.fullname | titlecase }}
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="createdAt">
+      <th mat-header-cell *matHeaderCellDef>Fecha</th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.createdAt | date : "short" }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="options">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let row" class="w-8">
+        <button
+          mat-icon-button
+          aria-label="menu options"
+          [matMenuTriggerFor]="menu"
+        >
+          <mat-icon>more_vert</mat-icon>
+        </button>
+        <mat-menu #menu="matMenu">
+          <button
+            mat-menu-item
+            [disabled]="!row.isActionable"
+            (click)="update(row)"
+          >
+            <mat-icon>edit</mat-icon>
+            <span>Editar</span>
+          </button>
+          <button
+            mat-menu-item
+            [disabled]="!row.isActionable"
+            (click)="send(row)"
+          >
+            <mat-icon>send</mat-icon>
+            <span>Remitir</span>
+          </button>
+          <button mat-menu-item (click)="generateRouteMap(row)">
+            <mat-icon>feed</mat-icon>
+            <span>Hoja de ruta</span>
+          </button>
+        </mat-menu>
+      </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    <tr class="mat-row" *matNoDataRow>
+      <td class="p-3" colspan="6">Sin resultados resultados</td>
+    </tr>
+  </table>
+  <mat-paginator
+    aria-label="Select page of officers search results"
+    showFirstLastButtons
+    [length]="datasize()"
+    [pageIndex]="index()"
+    [pageSize]="10"
+    (page)="onPageChange($event)"
+  />
 </div>
