--- a/src/app/layout/presentation/pages/settings/settings.component.html
+++ b/src/app/layout/presentation/pages/settings/settings.component.html
@@ -3,171 +3,85 @@
 </mat-toolbar>
 <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start">
   <mat-tab label="Usuario">
-    <div class="max-w-4xl mx-auto">
+    <div class="max-w-4xl mx-auto py-4">
       <div class="px-4 sm:px-0">
-        <h3 class="text-base/7 font-semibold text-gray-900">
-          Applicant Information
-        </h3>
+        <h3 class="text-base/7 font-semibold">Configuracion del usuario</h3>
         <p class="mt-1 max-w-2xl text-sm/6 text-gray-500">
-          Personal details and application.
+          Cambie su datos de acceso
         </p>
       </div>
       <div class="mt-6 border-t border-gray-100">
         <form [formGroup]="formUser">
           <dl class="divide-y divide-gray-100">
             <div class="px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0">
+              <dt class="text-sm/6 font-medium">Nombre</dt>
+              <dd class="mt-1 text-sm/6 sm:col-span-2 sm:mt-0">
+                {{ user()?.fullname | titlecase }}
+              </dd>
+            </div>
+            <div class="px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0">
               <dt class="text-sm/6 font-medium text-gray-900">Contraseña</dt>
-              <dd class="mt-1 text-sm/6 text-gray-700 sm:col-span-2 sm:mt-0">
-                <mat-form-field class="example-full-width">
+              <dd class="mt-1 sm:col-span-2 sm:mt-0 space-y-4 sm:max-w-[500px]">
+                <mat-form-field appearance="outline">
                   <mat-label>Nueva contraseña</mat-label>
                   <input
                     matInput
                     formControlName="password"
                     value="Ingrese su nueva contraseña"
+                    [type]="hidePassword() ? 'password' : 'text'"
                   />
+                  <button
+                    mat-icon-button
+                    matSuffix
+                    (click)="toggleHidePassword()"
+                    [attr.aria-label]="'Hide password'"
+                    [attr.aria-pressed]="hidePassword()"
+                  >
+                    <mat-icon>{{
+                      hidePassword() ? "visibility_off" : "visibility"
+                    }}</mat-icon>
+                  </button>
+                  @if (formUser.get('password')?.hasError) {
                   <mat-error>
-                    {{ formUser.get("password")?.errors | formErrorMessages }}
+                    {{ formUser.get("password")?.errors | formErrorMessages:errorMessages?.['password'] }}
                   </mat-error>
+                  }
                 </mat-form-field>
-              </dd>
-            </div>
-
-            <div class="px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0">
-              <dt class="text-sm/6 font-medium text-gray-900">
-                Confirmar contraseña
-              </dt>
-              <dd class="mt-1 text-sm/6 text-gray-700 sm:col-span-2 sm:mt-0">
-                <mat-form-field class="example-full-width">
+                @if ( formUser.get("password")?.value) {
+                <mat-form-field appearance="outline">
                   <mat-label>Confirmar contraseña</mat-label>
                   <input
                     matInput
                     formControlName="confirmPassword"
                     value="Ingrese su nueva contraseña"
+                    [type]="hideConfirmPassword() ? 'password' : 'text'"
                   />
+                  <button
+                    mat-icon-button
+                    matSuffix
+                    (click)="toggleHideConfirmPassword()"
+                    [attr.aria-label]="'Hide confirm password'"
+                    [attr.aria-pressed]="hideConfirmPassword()"
+                  >
+                    <mat-icon>
+                      {{
+                        hideConfirmPassword() ? "visibility_off" : "visibility"
+                      }}
+                    </mat-icon>
+                  </button>
+                  @if (formUser.get('confirmPassword')?.hasError) {
                   <mat-error>
-                    {{
-                      formUser.get("confirmPassword")?.errors
-                        | formErrorMessages
-                    }}
+                    {{  formUser.get("confirmPassword")?.errors | formErrorMessages:errorMessages?.['confirmPassword'] }}
                   </mat-error>
+                  }
                 </mat-form-field>
-              </dd>
-              <button mat-button [disabled]="formUser.invalid">Guardar</button>
-              <mat-form-field class="example-full-width">
-                <mat-label>TEst</mat-label>
-                <input
-                  matInput
-                  formControlName="example"
-                  value="Ingrese su nueva contraseña"
-                />
-               
-              </mat-form-field>
-              <pre>
-              {{ formUser.errors | json }}
-
-              </pre>
-            </div>
-            <div class="px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0">
-              <dt class="text-sm/6 font-medium text-gray-900">Email address</dt>
-              <dd class="mt-1 text-sm/6 text-gray-700 sm:col-span-2 sm:mt-0">
-                margotfosterexample.com
-              </dd>
-            </div>
-            <div class="px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0">
-              <dt class="text-sm/6 font-medium text-gray-900">
-                Salary expectation
-              </dt>
-              <dd class="mt-1 text-sm/6 text-gray-700 sm:col-span-2 sm:mt-0">
-                $120,000
-              </dd>
-            </div>
-            <div class="px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0">
-              <dt class="text-sm/6 font-medium text-gray-900">About</dt>
-              <dd class="mt-1 text-sm/6 text-gray-700 sm:col-span-2 sm:mt-0">
-                Fugiat ipsum ipsum deserunt culpa aute sint do nostrud anim
-                incididunt cillum culpa consequat. Excepteur qui ipsum aliquip
-                consequat sint. Sit id mollit nulla mollit nostrud in ea officia
-                proident. Irure nostrud pariatur mollit ad adipisicing
-                reprehenderit deserunt qui eu.
-              </dd>
-            </div>
-            <div class="px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0">
-              <dt class="text-sm/6 font-medium text-gray-900">Attachments</dt>
-              <dd class="mt-2 text-sm text-gray-900 sm:col-span-2 sm:mt-0">
-                <ul
-                  role="list"
-                  class="divide-y divide-gray-100 rounded-md border border-gray-200"
-                >
-                  <li
-                    class="flex items-center justify-between py-4 pr-5 pl-4 text-sm/6"
-                  >
-                    <div class="flex w-0 flex-1 items-center">
-                      <svg
-                        class="size-5 shrink-0 text-gray-400"
-                        viewBox="0 0 20 20"
-                        fill="currentColor"
-                        aria-hidden="true"
-                        data-slot="icon"
-                      >
-                        <path
-                          fill-rule="evenodd"
-                          d="M15.621 4.379a3 3 0 0 0-4.242 0l-7 7a3 3 0 0 0 4.241 4.243h.001l.497-.5a.75.75 0 0 1 1.064 1.057l-.498.501-.002.002a4.5 4.5 0 0 1-6.364-6.364l7-7a4.5 4.5 0 0 1 6.368 6.36l-3.455 3.553A2.625 2.625 0 1 1 9.52 9.52l3.45-3.451a.75.75 0 1 1 1.061 1.06l-3.45 3.451a1.125 1.125 0 0 0 1.587 1.595l3.454-3.553a3 3 0 0 0 0-4.242Z"
-                          clip-rule="evenodd"
-                        />
-                      </svg>
-                      <div class="ml-4 flex min-w-0 flex-1 gap-2">
-                        <span class="truncate font-medium"
-                          >resume_back_end_developer.pdf</span
-                        >
-                        <span class="shrink-0 text-gray-400">2.4mb</span>
-                      </div>
-                    </div>
-                    <div class="ml-4 shrink-0">
-                      <a
-                        href="#"
-                        class="font-medium text-indigo-600 hover:text-indigo-500"
-                        >Download</a
-                      >
-                    </div>
-                  </li>
-                  <li
-                    class="flex items-center justify-between py-4 pr-5 pl-4 text-sm/6"
-                  >
-                    <div class="flex w-0 flex-1 items-center">
-                      <svg
-                        class="size-5 shrink-0 text-gray-400"
-                        viewBox="0 0 20 20"
-                        fill="currentColor"
-                        aria-hidden="true"
-                        data-slot="icon"
-                      >
-                        <path
-                          fill-rule="evenodd"
-                          d="M15.621 4.379a3 3 0 0 0-4.242 0l-7 7a3 3 0 0 0 4.241 4.243h.001l.497-.5a.75.75 0 0 1 1.064 1.057l-.498.501-.002.002a4.5 4.5 0 0 1-6.364-6.364l7-7a4.5 4.5 0 0 1 6.368 6.36l-3.455 3.553A2.625 2.625 0 1 1 9.52 9.52l3.45-3.451a.75.75 0 1 1 1.061 1.06l-3.45 3.451a1.125 1.125 0 0 0 1.587 1.595l3.454-3.553a3 3 0 0 0 0-4.242Z"
-                          clip-rule="evenodd"
-                        />
-                      </svg>
-                      <div class="ml-4 flex min-w-0 flex-1 gap-2">
-                        <span class="truncate font-medium"
-                          >coverletter_back_end_developer.pdf</span
-                        >
-                        <span class="shrink-0 text-gray-400">4.5mb</span>
-                      </div>
-                    </div>
-                    <div class="ml-4 shrink-0">
-                      <a
-                        href="#"
-                        class="font-medium text-indigo-600 hover:text-indigo-500"
-                        >Download</a
-                      >
-                    </div>
-                  </li>
-                </ul>
+                }
               </dd>
             </div>
           </dl>
         </form>
       </div>
+      <button mat-flat-button [disabled]="formUser.invalid">Guardar</button>
     </div>
   </mat-tab>
   <mat-tab label="Personalizacion">
