--- a/src/app/layout/presentation/pages/home/home.component.html
+++ b/src/app/layout/presentation/pages/home/home.component.html
@@ -102,7 +102,7 @@
     [cdkConnectedOverlayOpen]="isProfileOpen"
     (overlayOutsideClick)="isProfileOpen = false"
   >
-    <div class="overlay p-3 sm:w-[400px] rounded-xl">
+    <div class="overlay p-3 sm:w-[400px]" @overlayAnimation>
       <profile [(isOpen)]="isProfileOpen" />
     </div>
   </ng-template>
@@ -122,11 +122,13 @@
       <navigation-list [menu]="menu" />
     </mat-sidenav>
 
-    <mat-sidenav-content style="position: relative;">
-      @if(loading$ | async) { 
-        <div class="absolute inset-0 flex items-center justify-center backdrop-blur-[2px] bg-gray-500 bg-opacity-30 z-50">
-          <mat-spinner />
-        </div>
+    <mat-sidenav-content style="position: relative">
+      @if(loading$ | async) {
+      <div
+        class="absolute inset-0 flex items-center justify-center backdrop-blur-[2px] bg-gray-500 bg-opacity-30 z-50"
+      >
+        <mat-spinner />
+      </div>
       }
       <div [@routeAnimations]="prepareRoute(outlet)">
         <router-outlet #outlet="outlet"></router-outlet>
